# climate-risk-projects

./: .gitignore  LICENSE  README.md
projects/2025-spring-amazon-wildfire-risk/: README.md  exposure_calc.py  fire_probability.py  highways.ipynb  osm_amazon_locations.py  osm_highways.py  pyproject.toml  test.ipynb
projects/2025-spring-muni-bond-wildfire-risk/: README.md  adjusted_gross_income.py  pyproject.toml  utils.py  wildfire_metrics.py
